src/css/style.css
/* ... */
/* @media only screen and (min-width:768px) and (max-width:1365px) {
  .call_to_action_bundle {
    height: 100% !important;
  }
} */

.call_to_action_bundle .background_image {
  z-index: 5;
  position: relative;
  object-fit: cover;
  height: 100%;
  width: 100%;
}

@media only screen and (max-width:767px) {
  .call_to_action_bundle .background_image {
      max-height: 400px;
  }
}

.call_to_action_bundle iframe {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  width: 100%;
  height: 100%;
}

.call_to_action_bundle img{
  height: 100vh;
  width: 100%;
  object-fit: cover;
}

.call_to_action_bundle .title-header{
  color: #fff;
}

.call_to_action_bundle video {
  object-fit: cover;
  width: 100% !important;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.call_to_action_bundle .video_background_YouTube {
  background: #000;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -99;
}

.call_to_action_bundle .video_foreground_YouTube,
.call_to_action_bundle .video_background_YouTube iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.call_to_action_bundle .video_background_Vimeo{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  overflow: hidden;
}
.call_to_action_bundle .video_background_Vimeo iframe {
  width: 100vw;
  height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
  min-height: 100vh;
  min-width: 188.77vh; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

[data-animate-cta="On"] .title-header,
[data-animate-cta="On"] .lead,
[data-animate-cta="On"] .btn{
  opacity: 0;
}

/**Card Bundle***/

.card_bundle button:active,
.card_bundle button:hover {
  background: transparent !important;
}

@media only screen and (max-width:767px) {
  .card_bundle .card-deck {
    -webkit-column-count: initial !important;
    -moz-column-count: 3;
    column-count: initial !important;
  }
}

.card_bundle .card-deck .card img{
  width: 100%;
  text-align: center;
  margin: auto;
  margin-bottom: 10px;
  object-fit: cover;
  height: auto;
  max-height: 200px;
}

@media only screen and (max-width:767px) {
  .card_bundle .card-deck .card img {
    width: 100%;
    text-align: center;
    margin: auto;
    margin-bottom: 10px;
  }
}

.card_bundle .rows{
  max-width: 768px;
  margin: auto;
}

.card_bundle .card .btn-primary {
  background-color: #0c0c0c !important;
  border-color: transparent !important;
}

.card_bundle .card-title{
  font-size: 1.15rem;
  text-align:center;
}


.card_bundle .card .modal-dialog{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 100%;
  border-radius: 0;
}

.card_bundle .card 	.card-body .btn{
  margin-top: 1rem;
}

.card_bundle .header_text{
  margin: 30px 0px;
}

.card_bundle .modal_close {
  background: #363D4E;
  border: none;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  outline: none;
  width: 52px;
  height: 52px;
  position: absolute;
  right: -15px;
  top: -17px;
  -webkit-transition: -webkit-transform 600ms;
  -moz-transition: -moz-transform 600ms;
  -ms-transition: -ms-transform 600ms;
  -o-transition: -o-transform 600ms;
  transition: transform 600ms;
}

.card_bundle .modal_close:hover {
  background: #3E465A;
  -webkit-transform: rotate(360deg) scale(1.10);
  -moz-transform: rotate(360deg) scale(1.10);
  -ms-transform: rotate(360deg) scale(1.10);
  -o-transform: rotate(360deg) scale(1.10);
  transform: rotate(360deg) scale(1.10);
  -webkit-transition: -webkit-transform 600ms;
  -moz-transition: -moz-transform 600ms;
  -ms-transition: -ms-transform 600ms;
  -o-transition: -o-transform 600ms;
  transition: transform 600ms;
}

.card_bundle .modal_close span,
.card_bundle span:before,
.card_bundle span:after {
  background: #FFFFFF;
  content: '';
  cursor: pointer;
  display: block;
  height: 2px;
  position: absolute;
  width: 20px;
}

.card_bundle .modal_close span:first-child {
  background: none;
  bottom: 0;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  top: 0;
}

.card_bundle .modal_close span:before {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.card_bundle .modal_close span:after {
  -webkit-transform: translateY(-2px) rotate(-45deg);
  -moz-transform: translateY(-2px) rotate(-45deg);
  -ms-transform: translateY(-2px) rotate(-45deg);
  -o-transform: translateY(-2px) rotate(-45deg);
  transform: translateY(-2px) rotate(-45deg);
  top: 2px;
}

.card_bundle .modal-content{
  border-radius: 0;
}

.card_bundle  .modal.show .modal-dialog{
  transform: translate(-50%,-50%);
  position: absolute;
  top:50%;
  left:50%;
  width: 100%;
  z-index: 999;
}

@media only screen and (max-width: 767px){
  .card_bundle .modal.show .modal-dialog {
    width: 90%;
    margin: auto;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1024px){
  .card_bundle .card-text {
    font-size: .85rem;
  }
}

.card_bundle .card-text {
  text-align: center;
  background: #fff;
  z-index: -24;
  color: #000000;
}

.card_bundle .card-deck .card {
  display: inline-block;
  width: 100%;
}

@media only screen and (max-width: 767px){
  .card_bundle .card-deck .card {
    display: block;
    -webkit-box-flex: none;
    -ms-flex: none;
    flex: none;
    margin: 0px 0px 15px 0;
    width: 100%;
  }
}

[data-animate-card="On"] .header_text,
[data-animate-card="On"] .lead,
[data-animate-card="On"] .card,
[data-animate-card="On"] .hyperlinks{
  opacity: 0;
}

.cart-flyout{
  position: absolute;
  right: 0;
  transform: translate(-50%,-50%);
  top: 50%;
}
/* ... */

